Aprimorando a validação, o tratamento de erros e o mapeamento de respostas entre controladores e serviços.